@@ -4,6 +4,10 @@ Changelog
 2.13.2 (unreleased)
 -------------------
 
+- Preserve the `actual_result_count` on all lazy return values. This allows
+  to get proper batching information from catalog results which have been
+  restricted by `sort_limit`.
+
 - Made sure `actual_result_count` is available on all lazy classes and falls
   back to `__len__` if not explicitly provided.
 
